java transactions tests